<resources>
    <string name="app_name" translatable="false">AKILIMO</string>
    <string name="hello_blank_fragment" translatable="false">Initialize fragments</string>
    <string name="empty_text" translatable="false" />
    <string name="under_score" translatable="false">___</string>
    <string name="lbl_empty_space" translatable="false"> </string>
    <string name="dummy_coordinates" translatable="false">Lat:-1.567657567 Lon:35.47829734</string>
    <string name="ad_attribution" translatable="false">Ad</string>
    <string name="welcome_title">Are you growing cassava? And looking to become a pro? AKILIMO can help you!</string>
    <string name="welcome_subtitle">AKILIMO helps you increase yield and maximise profit in your cassava farm. Let’s get started!</string>
    <string name="msg_language_selection_impact">The selected language will be used throughout the app for all advice and recommendations.</string>
    <string name="lbl_lock_app_language">Override system language</string>
    <string name="msg_lock_app_language_hint">Always use the selected language, even if system language changes.</string>
    <string name="welcome_instructions">Whether you need fertilizer recommendations, planting schemes, or advice on tillage, weeding and intercropping,we’ve got you covered.\n\nAKILIMO will help you increase yield and maximise profit in your cassava farm. Let’s get started!</string>
    <string name="lbl_available_fertilizers_subtitle">Select the fertilizers that you can find at your local dealer.</string>
    <string name="lbl_select_fertilizers">Select Fertilizers</string>
    <string name="important_instructions_title">IMPORTANT INFORMATION</string>
    <string name="important_instructions">Please note that the advice provided by AKILIMO is intended to provide helpful guidance only, and does not offer any guarantees. Success in any endeavour depends on a range of factors outside of our control, including user behaviour, how the advice is implemented and external circumstances. Therefore, we encourage you to use our app as a tool to inform your decisions, but always to exercise your best judgment and seek additional advice as needed.</string>
    <string name="important_instructions_b">The AKILIMO app collects essential information such as your location, field size and planting date to provide customised recommendations. To ensure the best results, please enter accurate and complete information. Properly measuring your field size is crucial to avoid underestimating the resources required to achieve optimal yields and maximize profits. Inaccurate measurements may result in unnecessary expenses and will impact your returns.</string>
    <string name="title_activity_fertilizer_choice">Available fertilizers</string>
    <string name="title_activity_fertilizer_rec">Fertilizer recommendations</string>
    <string name="title_activity_investment_amount">Investment amount</string>
    <string name="title_activity_cassava_root_yield">Cassava root yield</string>
    <string name="title_activity_cassava_market_outlet">Cassava price</string>
    <string name="title_activity_maize_market_outlet">Maize produce prices</string>
    <string name="title_activity_sweet_potato_market">Sweet potato prices</string>
    <string name="title_activity_maize_performance">Maize performance</string>
    <string name="title_activity_farm_location">Field location</string>
    <string name="title_tillage_operations">Basic management operations</string>
    <string name="title_planting_harvest">When do you plant and harvest?</string>
    <string name="title_planting_harvest_subtitle">Please let us know when you have planted (or will plant) and when you intend to harvest. We use this to provide advice that considers the typical weather during the growth of your crop</string>
    <string name="title_manual_tillage_cost">Manual tillage costs</string>
    <string name="title_weed_control">Weed operations</string>
    <string name="title_maize_intercropping">Intercropping with maize</string>
    <string name="title_sweet_potato_intercropping">Intercropping with sweet potato</string>
    <string name="title_activity_language_picker">Select your language</string>
    <string name="title_recommendations_delivery">Recommendations delivery</string>
    <string name="lbl_one" translatable="false">1</string>
    <string name="lbl_two" translatable="false">2</string>
    <string name="lbl_three" translatable="false">3</string>
    <string name="lbl_four" translatable="false">4</string>
    <string name="lbl_five" translatable="false">5</string>
    <string name="lbl_start">Start</string>
    <string name="lbl_proceed">Proceed</string>
    <string name="lbl_finish">Finish</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_greetings_text">Nice to meet you "{full_name}".</string>
    <string name="lbl_country_location_sub">In which country is your farm located?</string>
    <string name="lbl_nigeria" translatable="false">Nigeria</string>
    <string name="lbl_tanzania" translatable="false">Tanzania</string>
    <string name="lbl_area_unit">What is your preferred field area unit?</string>
    <string name="lbl_area_unit_subtitle">To get the best results, please provide an accurate measurement of your field’s size. If you\'re unsure of the exact size, you can download an app from the Play Store, for example "GPS Fields Area Measure." This app can help you determine the size of your field by walking along its boundaries or manually marking these.</string>
    <string name="area_unit_acre">Acre (acre)</string>
    <string name="area_unit_ha">Hectare (ha)</string>
    <string name="area_unit_are">Are (are)</string>
    <string name="area_unit_square_meter">Square meter (m\u00B2)</string>
    <string name="lbl_acre">acre</string>
    <string name="lbl_ha">ha</string>
    <string name="lbl_are">are</string>
    <string name="lbl_m2" translatable="false">m\u00B2</string>
    <string name="lbl_cassava_field_size_no_ph">What is the size of your field?</string>
    <string name="lbl_cassava_field_size">What is the size of your field (in %1$s)?</string>
    <string name="quarter_acre">About 0.25 acre</string>
    <string name="half_acre">About 0.5 acre</string>
    <string name="one_acre">About 1 acre</string>
    <string name="one_half_acre">About 1.5 acre</string>
    <string name="two_half_acres">About 2.5 acre</string>
    <string name="five_acres">About 5 acre</string>
    <string name="exact_field_area">Specify the exact area of your field.</string>
    <string name="quarter_acre_to_ha">About 0.1 ha</string>
    <string name="half_acre_to_ha">About 0.2 ha</string>
    <string name="one_acre_to_ha">About 0.4 ha</string>
    <string name="one_half_acre_to_ha">About 0.6 ha</string>
    <string name="two_half_acre_to_ha">About 1 ha</string>
    <string name="quarter_acre_to_are">About 10 are</string>
    <string name="half_acre_to_are">About 20 are</string>
    <string name="one_acre_to_are">About 16 are</string>
    <string name="one_half_acre_to_are">About 20 are</string>
    <string name="two_half_acre_to_are">About 40 are</string>
    <string name="quarter_acre_to_m2">About 1,000 m\u00B2</string>
    <string name="half_acre_to_m2">About 2,000 m\u00B2</string>
    <string name="one_acre_to_m2">About 4,000 m\u00B2</string>
    <string name="one_half_acre_to_m2">About 6,000 m\u00B2</string>
    <string name="two_half_acre_to_m2">About 10,000 m\u00B2</string>
    <string name="lbl_salutation">Hi, nice to meet you!</string>
    <string name="lbl_farm_location">Where is your cassava field located?</string>
    <string name="lbl_current_location">Use current location</string>
    <string name="lbl_manual_location">Select location manually</string>
    <string name="lbl_recommendations">Recommendations</string>
    <string name="lbl_fertilizers">Fertilizers</string>
    <string name="lbl_fertilizer_recommendations">Fertilizer recommendations</string>
    <string name="lbl_dates">Dates</string>
    <string name="lbl_cassava">Cassava</string>
    <string name="lbl_yield">Cassava Yield</string>
    <string name="lbl_investment">Investment</string>
    <string name="lbl_maize">Maize Heigh</string>
    <string name="lbl_tillage">Tillage</string>
    <string name="lbl_sweet_potato">Sweet Potato</string>
    <string name="lbl_tractor_access_title">Tractor</string>
    <string name="lbl_intercropping">Intercropping</string>
    <string name="lbl_intercropping_maize">Cassava maize intercrop</string>
    <string name="lbl_intercropping_maize_title">Maize Intercrop</string>
    <string name="lbl_intercropping_sweet_potato">Cassava sweet potato intercrop</string>
    <string name="lbl_intercropping_sweet_potato_title">Sweet Potato Intercrop</string>
    <string name="lbl_scheduled_planting_and_high_starch">Scheduled planting and high starch</string>
    <string name="lbl_best_planting_practices">Best planting practices</string>
    <string name="lbl_best_planting_practices_title">Planting Practices</string>
    <string name="lbl_weed_management">Weed management</string>
    <string-array name="recommendations">
        <item>@string/lbl_fertilizer_recommendations</item>
        <item>@string/lbl_intercropping_maize</item>
        <item>@string/lbl_intercropping_sweet_potato</item>
        <item>@string/lbl_scheduled_planting_and_high_starch</item>
        <item>@string/lbl_weed_management</item>
    </string-array>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="lbl_available_fertilizers">Which fertilizers are available for you?</string>
    <string name="lbl_fertilizer_costs">Fertilizer costs</string>
    <string name="lbl_consider_alternative_planting">Do you want to consider alternative planting and harvest dates?</string>
    <string name="lbl_investment_amount">How much are you willing to invest in fertilizers?</string>
    <string name="lbl_investment_amount_label">%1$s %2$s</string>
    <string name="lbl_investment_amount_simple">{amount} {currency} per {unit}</string>
    <string name="lbl_investment_per_area">{amount} {currency} per {size} {unit}</string>
    <string name="lbl_per_unit">per {unit}</string>
    <string name="lbl_typical_yield">What is the typical cassava yield of your field?</string>
    <string name="lbl_change_planting_date">Change planting date</string>
    <string name="lbl_planting_flexible">My planting date is flexible by:</string>
    <string name="lbl_change_harvest_date">Change harvest date</string>
    <string name="lbl_harvest_flexible">My harvest date is flexible by:</string>
    <string name="lbl_one_month_window">1 month</string>
    <string name="lbl_two_month_window">2 months</string>
    <string name="lbl_no">No</string>
    <string name="lbl_yes">Yes</string>
    <string name="up_20_30_usd_per_tonne">20–30 USD per tonne</string>
    <string name="up_30_50_usd_per_tonne">30–50 USD per tonne</string>
    <string name="up_50_100_usd_per_tonne">50–100 USD per tonne</string>
    <string name="up_100_150_usd_per_tonne">100–150 USD per tonne</string>
    <string name="up_150_200_usd_per_tonne">150–200 USD per tonne</string>
    <string name="lbl_exact_price_x_per_unit_of_sale">I want to specify the exact price</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_provide_unit_price">Provide unit price</string>
    <string name="lbl_unit_price">Unit price</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_enter_your_field_size">Enter your field size</string>
    <string name="lbl_planting_date">Planting date</string>
    <string name="lbl_harvesting_date">Harvesting date</string>
    <string name="lbl_separator" translatable="false">--</string>
</resources>