<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_5"
    android:padding="@dimen/spacing_small"
    tools:context=".views.fragments.FieldSizeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="?attr/actionBarSize">

        <ImageView
            android:id="@+id/image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:padding="@dimen/spacing_xlarge"
            app:srcCompat="@drawable/field_map" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_cassava_field_size"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/deep_orange_500"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioFieldAreaGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin">


            <RadioButton
                android:id="@+id/rd_quarter_acre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quarter_acre" />


            <RadioButton
                android:id="@+id/rd_half_acre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/half_acre" />


            <RadioButton
                android:id="@+id/rd_one_acre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_acre" />

            <RadioButton
                android:id="@+id/rd_one_half_acre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one_half_acre" />

            <RadioButton
                android:id="@+id/rd_two_half_acre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two_half_acres" />


            <RadioButton
                android:id="@+id/rd_five_acre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/five_acres"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/rd_specify_acre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exact_field_area" />

        </RadioGroup>

    </LinearLayout>
</RelativeLayout>