<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/harvestCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/spacing_medium"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/dimen_5"
    app:cardElevation="@dimen/dimen_5">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_middle">

        <TextView
            android:id="@+id/lblCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/lbl_harvesting_date"
            android:textColor="@color/grey_90"
            android:textSize="@dimen/font_size_16"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_calendar" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/flexibleHarvest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_middle"
            android:textOff="@string/lbl_no"
            android:textOn="@string/lbl_yes" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_harvest_flexible" />


        <RadioGroup
            android:id="@+id/rdgHarvestWindow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:orientation="horizontal"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/rdHarvestOneMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_one_month_window" />

            <androidx.legacy.widget.Space
                android:layout_width="150dp"
                android:layout_height="0dp" />

            <RadioButton
                android:id="@+id/rdHarvestTwoMonths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_two_month_window" />

        </RadioGroup>


        <TextView
            android:id="@+id/lblSelectedHarvestDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/lbl_separator"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPickHarvestDate"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_calendar"
            android:padding="@dimen/dimen_16"
            android:text="@string/lbl_change_harvest_date"
            android:textAllCaps="false" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>