<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <!-- unit price -->
    <TextView
        android:id="@+id/unitPriceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/lbl_unit_price"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorAccent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/unitPriceCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:visibility="visible"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="6dp"
        app:contentPadding="@dimen/spacing_small">

        <RadioGroup
            android:id="@+id/rdgUnitPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rd_exact_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_exact_price_x_per_unit_of_sale" />

            <RadioButton
                android:id="@+id/rd_20_30_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/up_20_30_usd_per_tonne" />

            <RadioButton
                android:id="@+id/rd_30_50_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/up_30_50_usd_per_tonne" />

            <RadioButton
                android:id="@+id/rd_50_100_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/up_50_100_usd_per_tonne" />

            <RadioButton
                android:id="@+id/rd_100_150_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/up_100_150_usd_per_tonne" />

            <RadioButton
                android:id="@+id/rd_150_200_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/up_150_200_usd_per_tonne" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_medium">


        <EditText
            android:id="@+id/etUnitPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_5"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/lbl_please_provide_unit_price"
            android:inputType="numberDecimal"
            android:padding="@dimen/spacing_large"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_submit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/lbl_submit" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_cancel"
            style="@style/Button.Accent.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:gravity="center"
            android:text="@string/lbl_cancel" />


    </LinearLayout>

</LinearLayout>