<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_area_unit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_medium"
    tools:context=".views.fragments.AreaUnitFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_area_unit"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/spacing_mxlarge"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/spacing_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.MaterialComponents.MediumComponent"
        app:srcCompat="@drawable/ic_young_cassava" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_area_unit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/lbl_area_unit"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_area_unit" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_area_unit_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:lineSpacingExtra="@dimen/dimen_5"
        android:text="@string/lbl_area_unit_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_area_unit_title" />

    <RadioGroup
        android:id="@+id/rdg_area_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:padding="@dimen/spacing_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_area_unit_subtitle">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_unit_acre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area_unit_acre" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_unit_ha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area_unit_ha" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_unit_are"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area_unit_are"
            android:visibility="gone" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_unit_sqm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area_unit_square_meter"
            android:visibility="gone" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
