<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <!-- Title -->
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_cassava_field_size"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="?attr/colorOnBackground"
        android:textStyle="bold" />

    <!-- Field Size Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_size_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/lbl_enter_your_field_size">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_cancel"
            style="@style/AppMaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_submit"
            style="@style/AppMaterialButton.Outline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:text="@string/lbl_save" />
    </LinearLayout>

</LinearLayout>
